--- a/iot-finger-app/package.json
+++ b/iot-finger-app/package.json
@@ -13,10 +13,12 @@
     "axios": "^0.16.2",
     "bulma": "^0.5.3",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "moment": "^2.18.1",
     "vue": "^2.3.3",
     "vue-awesome": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vue-socket.io": "^2.1.1-a"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
